# cve-2023-20573-poc

./: README.md  rust-toolchain.toml
common/: Cargo.toml
common/constants/src/: lib.rs
common/loader/: Cargo.toml  build.rs
common/loader/src/: kernel.rs  lib.rs
common/snp-types/src/: lib.rs
common/snp-types/src/ghcb/: msr_protocol.rs
host/: Cargo.toml
host/vmm/: Cargo.toml
host/vmm/src/: kvm.rs  lib.rs  main.rs  slot.rs
tee/: Cargo.toml
tee/.cargo/: config.toml
tee/kernel/: Cargo.toml
tee/kernel/src/: cpuid.rs  exception.rs  ghcb.rs  main.rs  pagetable.rs  serial_logger.rs
tee/kernel/src/exception/: vc.rs
